--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_svg: ^2.0.10+1
   form_field_validator: ^1.1.0
   cached_network_image: ^3.2.0
+  google_fonts: ^6.2.1
+  get: ^4.6.6
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +66,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/illustrations/
+    - assets/svgs/
+    - assets/svgs/duotone/
+    - assets/svgs/monotone/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -77,16 +84,11 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: Urbanist
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  #       - asset: fonts/Urbanist-Italic-VariableFont_wght.ttf
+  #       - asset: fonts/Urbanist-VariableFont_wght.ttf
+  #       style: italic
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
