--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   google_fonts: ^6.2.1
   get: ^4.6.6
   flutter_screenutil: ^5.9.3
+  file_picker: ^8.1.3
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
