--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   file_picker: ^8.1.3
   image_picker: ^1.1.2
+  curved_labeled_navigation_bar: ^2.0.3
 
 dev_dependencies:
   flutter_test:
