--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  url_launcher: ^6.3.0
   flutter_svg: ^2.0.10+1
   form_field_validator: ^1.1.0
   cached_network_image: ^3.2.0
@@ -44,6 +43,10 @@ dependencies:
   file_picker: ^8.1.3
   image_picker: ^1.1.2
   curved_labeled_navigation_bar: ^2.0.3
+  fpdart: ^1.1.1
+  dio: ^5.7.0
+  flutter_dotenv: ^5.2.1
+  pretty_dio_logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +76,7 @@ flutter:
     - assets/svgs/duotone/
     - assets/svgs/monotone/
     - assets/images/
+    - .env
 
   #   - images/a_dot_ham.jpeg
 
