--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   dio: ^5.7.0
   flutter_dotenv: ^5.2.1
   pretty_dio_logger: ^1.4.0
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.1.1
 
 dev_dependencies:
   flutter_test:
