--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
