--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
   shared_preferences: ^2.3.3
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
