--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   dio_cookie_manager: ^3.1.1
   shared_preferences: ^2.3.3
   path_provider: ^2.1.5
+  flutter_markdown: ^0.7.4+1
 
 dev_dependencies:
   flutter_test:
