--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   shared_preferences: ^2.3.3
   path_provider: ^2.1.5
   flutter_markdown: ^0.7.4+1
+  shimmer: ^3.0.0
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
